@@ -183,6 +183,34 @@ mln_lang_mutex_unlock(lang)
 
 
 
+#### mln_lang_ctx_pipe_send
+
+```c
+int mln_lang_ctx_pipe_send(mln_lang_ctx_t *ctx, char *fmt, ...)
+```
+
+描述：在C代码中向指定的脚本任务发送一个消息。这个消息可以被脚本层的`pipe`函数接收，其中：
+
+- `ctx`是对应脚本任务的上下文结构指针
+- `fmt`是用于对可变参数的解释，`fmt`支持三种字符：
+  - `i`整数，该整数应该是`mln_s64_t`类型整数
+  - `r`实数，该实数应该是`double`类型
+  - `s`字符串，该字符串应对应`mln_string_t`指针参数
+
+返回值：
+
+- `0` 成功
+- `-1` 失败
+
+示例：
+
+```c
+mln_string_t s = mln_string("hello");
+mln_lang_ctx_pipe_send(ctx, "sir", &s, 1, 3.14);
+```
+
+
+
 ### 示例
 
 最好的示例就是Melang仓库的源代码，仅有一个文件不超过200行，关于脚本调用的代码仅35行。该仓库仅仅是Melon核心库的一个启动器。详情参见：[melang.c](https://github.com/Water-Melon/Melang/blob/master/melang.c)。
